{
  "version": 4,
  "terraform_version": "1.0.7",
  "serial": 1,
  "lineage": "6cd6c420-89e9-338f-96a3-350ef742c77a",
  "resources": [
    {
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "blue",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "udacity/blue-svc",
            "metadata": [
              {
                "annotations": {
                  "service.beta.kubernetes.io/aws-load-balancer-nlb-target-type": "ip",
                  "service.beta.kubernetes.io/aws-load-balancer-type": "nlb"
                },
                "generation": 0,
                "name": "blue-svc",
                "namespace": "udacity",
                "resource_version": "1530",
                "uid": "45b04318-8988-4a9f-95df-5c9d840c917e"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "172.20.50.221",
                "cluster_ips": [
                  "172.20.50.221"
                ],
                "external_traffic_policy": "Cluster",
                "health_check_node_port": 0,
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "node_port": 30437,
                    "port": 80,
                    "protocol": "TCP",
                    "target_port": "80"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "blue"
                },
                "session_affinity": "None",
                "type": "LoadBalancer"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "hostname": "a45b0431889884a9f95df5c9d840c917-0fd07d2cfaa81ac7.elb.us-east-2.amazonaws.com"
                      }
                    ]
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "dependencies": [
            "module.vpc.aws_route_table_association.public",
            "module.project_eks.aws_iam_policy.k8s_auto_scaling",
            "module.project_eks.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.project_eks.aws_iam_role_policy_attachment.node_AmazonEKS_CNI_Policy",
            "module.project_eks.aws_iam_role_policy_attachment.node_CloudWatchAgentServerPolicy",
            "data.aws_eks_cluster.cluster",
            "data.aws_eks_cluster_auth.cluster",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route.public_internet_gateway",
            "module.vpc.aws_route_table.private",
            "data.aws_caller_identity.current",
            "module.project_eks.aws_eks_node_group.node",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_eip.nat",
            "module.project_eks.data.aws_iam_policy_document.eks_assume_role_policy",
            "module.project_eks.data.aws_iam_policy_document.eks_node_assume_role_policy",
            "module.project_eks.aws_iam_policy.eks_cluster_role_cloudwatch_policy",
            "module.project_eks.aws_iam_role.eks_node_cluster_role",
            "module.project_eks.aws_iam_role_policy_attachment.node_AmazonEC2ContainerRegistryReadOnly",
            "module.project_eks.aws_iam_role_policy_attachment.node_AmazonEKSWorkerNodePolicy",
            "module.project_eks.aws_iam_role.eks_cluster_role",
            "module.project_eks.aws_iam_role_policy_attachment.cluster_AmazonEKSServicePolicy",
            "module.vpc.aws_route.private_nat_gateway",
            "module.project_eks.data.aws_iam_policy_document.k8s_auto_scaling",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_vpc.this",
            "module.project_eks.aws_eks_cluster.cluster",
            "module.project_eks.aws_iam_policy.eks_node_instance_policy",
            "module.project_eks.aws_iam_role_policy_attachment.cluster_AmazonEKSCloudwatchPolicy",
            "module.project_eks.aws_iam_role_policy_attachment.node_harmony_policy_attachment"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "green",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "udacity/green-svc",
            "metadata": [
              {
                "annotations": {
                  "service.beta.kubernetes.io/aws-load-balancer-nlb-target-type": "ip",
                  "service.beta.kubernetes.io/aws-load-balancer-type": "nlb"
                },
                "generation": 0,
                "name": "green-svc",
                "namespace": "udacity",
                "resource_version": "1521",
                "uid": "2970e3c7-2305-4fec-a7fa-f909a6cc5598"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "172.20.228.216",
                "cluster_ips": [
                  "172.20.228.216"
                ],
                "external_traffic_policy": "Cluster",
                "health_check_node_port": 0,
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "node_port": 31835,
                    "port": 80,
                    "protocol": "TCP",
                    "target_port": "80"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "green"
                },
                "session_affinity": "None",
                "type": "LoadBalancer"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "hostname": "a2970e3c723054feca7faf909a6cc559-0d5f31a8fe09f07f.elb.us-east-2.amazonaws.com"
                      }
                    ]
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "data.aws_eks_cluster.cluster",
            "module.project_eks.aws_iam_role_policy_attachment.cluster_AmazonEKSCloudwatchPolicy",
            "module.project_eks.aws_iam_role_policy_attachment.node_AmazonEKSWorkerNodePolicy",
            "module.project_eks.aws_iam_role_policy_attachment.node_CloudWatchAgentServerPolicy",
            "module.vpc.aws_subnet.private",
            "module.project_eks.aws_eks_node_group.node",
            "module.project_eks.aws_iam_policy.k8s_auto_scaling",
            "module.project_eks.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.project_eks.aws_iam_role_policy_attachment.node_AmazonEC2ContainerRegistryReadOnly",
            "module.project_eks.data.aws_iam_policy_document.eks_assume_role_policy",
            "module.vpc.aws_vpc.this",
            "module.project_eks.aws_eks_cluster.cluster",
            "module.project_eks.aws_iam_role_policy_attachment.cluster_AmazonEKSServicePolicy",
            "module.vpc.aws_route.public_internet_gateway",
            "module.project_eks.aws_iam_role_policy_attachment.node_harmony_policy_attachment",
            "module.vpc.aws_route.private_nat_gateway",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_subnet.public",
            "module.project_eks.aws_iam_role.eks_node_cluster_role",
            "module.project_eks.aws_iam_role_policy_attachment.node_AmazonEKS_CNI_Policy",
            "module.project_eks.data.aws_iam_policy_document.eks_node_assume_role_policy",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.project_eks.aws_iam_policy.eks_cluster_role_cloudwatch_policy",
            "module.project_eks.aws_iam_policy.eks_node_instance_policy",
            "module.project_eks.aws_iam_role.eks_cluster_role",
            "data.aws_caller_identity.current",
            "data.aws_eks_cluster_auth.cluster",
            "module.project_eks.data.aws_iam_policy_document.k8s_auto_scaling",
            "module.vpc.aws_route_table.private"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07fe4b25b8c8589c8",
            "association_id": "eipassoc-0defa9e3a9f30fcf2",
            "domain": "vpc",
            "id": "eipalloc-07fe4b25b8c8589c8",
            "network_border_group": "us-east-2",
            "network_interface": "eni-0e39c81eeb8ca90fd",
            "private_dns": "ip-10-100-10-97.us-east-2.compute.internal",
            "private_ip": "10.100.10.97",
            "public_dns": "ec2-3-17-171-182.us-east-2.compute.amazonaws.com",
            "public_ip": "3.17.171.182",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "udacity-project-us-east-2a"
            },
            "tags_all": {
              "Name": "udacity-project-us-east-2a",
              "Terraform": "true"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:144965779334:internet-gateway/igw-0272ef7365ade4b3f",
            "id": "igw-0272ef7365ade4b3f",
            "owner_id": "144965779334",
            "tags": {
              "Name": "udacity-project"
            },
            "tags_all": {
              "Name": "udacity-project",
              "Terraform": "true"
            },
            "vpc_id": "vpc-051e19387842d1644"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07fe4b25b8c8589c8",
            "connectivity_type": "public",
            "id": "nat-0009aef4b190c2245",
            "network_interface_id": "eni-0e39c81eeb8ca90fd",
            "private_ip": "10.100.10.97",
            "public_ip": "3.17.171.182",
            "subnet_id": "subnet-031d663c8d07b5622",
            "tags": {
              "Name": "udacity-project-us-east-2a"
            },
            "tags_all": {
              "Name": "udacity-project-us-east-2a",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0b47acf15bcae85e01080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0009aef4b190c2245",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b47acf15bcae85e0",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-02426fc1311e9f36c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0009aef4b190c2245",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02426fc1311e9f36c",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0e3940496dbeb5ba31080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0009aef4b190c2245",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e3940496dbeb5ba3",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0272ef7365ade4b3f",
            "id": "r-rtb-028e61879cf90e47b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-028e61879cf90e47b",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_internet_gateway.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0272ef7365ade4b3f",
            "id": "r-rtb-028e61879cf90e47b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-028e61879cf90e47b",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0272ef7365ade4b3f",
            "id": "r-rtb-028e61879cf90e47b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-028e61879cf90e47b",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:144965779334:route-table/rtb-0b47acf15bcae85e0",
            "id": "rtb-0b47acf15bcae85e0",
            "owner_id": "144965779334",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0009aef4b190c2245",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "udacity-project-private-us-east-2a"
            },
            "tags_all": {
              "Name": "udacity-project-private-us-east-2a",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-051e19387842d1644"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:144965779334:route-table/rtb-02426fc1311e9f36c",
            "id": "rtb-02426fc1311e9f36c",
            "owner_id": "144965779334",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0009aef4b190c2245",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "udacity-project-private-us-east-2b"
            },
            "tags_all": {
              "Name": "udacity-project-private-us-east-2b",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-051e19387842d1644"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:144965779334:route-table/rtb-0e3940496dbeb5ba3",
            "id": "rtb-0e3940496dbeb5ba3",
            "owner_id": "144965779334",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0009aef4b190c2245",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "udacity-project-private-us-east-2c"
            },
            "tags_all": {
              "Name": "udacity-project-private-us-east-2c",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-051e19387842d1644"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:144965779334:route-table/rtb-028e61879cf90e47b",
            "id": "rtb-028e61879cf90e47b",
            "owner_id": "144965779334",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0272ef7365ade4b3f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "udacity-project-public"
            },
            "tags_all": {
              "Name": "udacity-project-public",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-051e19387842d1644"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c8afe163ad8f38b9",
            "route_table_id": "rtb-0b47acf15bcae85e0",
            "subnet_id": "subnet-02d96f860dc5b4472"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01b3c6b691b4582fd",
            "route_table_id": "rtb-02426fc1311e9f36c",
            "subnet_id": "subnet-03068347ad82ee128"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e1b3f5c072d01419",
            "route_table_id": "rtb-0e3940496dbeb5ba3",
            "subnet_id": "subnet-05cac38d4546d289d"
          },
          "dependencies": [
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_route_table.private"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-096ed0dfb44e7f846",
            "route_table_id": "rtb-028e61879cf90e47b",
            "subnet_id": "subnet-031d663c8d07b5622"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a5d25116950c21d8",
            "route_table_id": "rtb-028e61879cf90e47b",
            "subnet_id": "subnet-03c6c39bb1bd8393b"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aa423462d8287d78",
            "route_table_id": "rtb-028e61879cf90e47b",
            "subnet_id": "subnet-080b89c9df65b842d"
          },
          "dependencies": [
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_route_table.public"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:144965779334:subnet/subnet-02d96f860dc5b4472",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.100.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02d96f860dc5b4472",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "144965779334",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "udacity-project-private-us-east-2a",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "udacity-project-private-us-east-2a",
              "Terraform": "true",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-051e19387842d1644"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:144965779334:subnet/subnet-03068347ad82ee128",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.100.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03068347ad82ee128",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "144965779334",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "udacity-project-private-us-east-2b",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "udacity-project-private-us-east-2b",
              "Terraform": "true",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-051e19387842d1644"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:144965779334:subnet/subnet-05cac38d4546d289d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.100.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05cac38d4546d289d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "144965779334",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "udacity-project-private-us-east-2c",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "udacity-project-private-us-east-2c",
              "Terraform": "true",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-051e19387842d1644"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:144965779334:subnet/subnet-031d663c8d07b5622",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.100.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-031d663c8d07b5622",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "144965779334",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "udacity-project-public-us-east-2a",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "udacity-project-public-us-east-2a",
              "Terraform": "true",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-051e19387842d1644"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:144965779334:subnet/subnet-03c6c39bb1bd8393b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.100.11.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03c6c39bb1bd8393b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "144965779334",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "udacity-project-public-us-east-2b",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "udacity-project-public-us-east-2b",
              "Terraform": "true",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-051e19387842d1644"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:144965779334:subnet/subnet-080b89c9df65b842d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.100.12.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-080b89c9df65b842d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "144965779334",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "udacity-project-public-us-east-2c",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "udacity-project-public-us-east-2c",
              "Terraform": "true",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-051e19387842d1644"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:144965779334:vpc/vpc-051e19387842d1644",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.100.0.0/16",
            "default_network_acl_id": "acl-00c8f9659dee68fe9",
            "default_route_table_id": "rtb-06336c9350efb663b",
            "default_security_group_id": "sg-020ee080869ee9073",
            "dhcp_options_id": "dopt-05413ca81efc9538e",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-051e19387842d1644",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06336c9350efb663b",
            "owner_id": "144965779334",
            "tags": {
              "Name": "udacity-project"
            },
            "tags_all": {
              "Name": "udacity-project",
              "Terraform": "true"
            }
          }
        }
      ]
    }
  ]
}